force-app/main/default/objects/Form_Submissions__c/Form_Submissions__c.object-meta.xml
<CustomObject>
    <description>This is a new table that will serve as a log for all form completions. Fields will be populated through API connection.</description>
    <label>Form Submissions</label>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>Form Submissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>