force-app/main/default/objects/Form_Submissions__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Code</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>