force-app/main/default/objects/Form_Submissions__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>