force-app/main/default/objects/Form_Submissions__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <label>Form URL</label>
    <length>99</length>
    <type>Text</type>
</CustomField>