force-app/main/default/objects/Form_Submissions__c/fields/Intl_Product_Family_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Intl_Product_Family_of_Interest__c</fullName>
    <label>Intl Product Family of Interest</label>
    <length>99</length>
    <type>Text</type>
</CustomField>